# calhacks-2024

./: README.md
scorpion/: Cargo.toml
scorpion/.cargo/: config.toml
scorpion/src/: lib.rs
