[package]
name = "scorpion"
version = "0.1.0"
edition = "2021"

[dependencies]
numpy = "0.21.0"
pyo3 = { version = "0.21.2", features = ["extension-module"] }
ndarray = "0.15.6"
ndarray-linalg = "0.14.1"
ndarray-stats = "0.4.0"


[lib]
crate-type = ["cdylib"]

[package.metadata.maturin]
python = "python3.11"
